/*
SPDX-FileCopyrightText: 2022-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package atomix.multiraft.atomic.value.v1;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "gogoproto/gogo.proto";

message AtomicValueState {
    Value value = 1;
    google.protobuf.Timestamp expire = 2 [
        (gogoproto.stdtime) = true
    ];
}

message AtomicValueInput {
    oneof input {
        GetInput get = 1;
        SetInput set = 2;
        UpdateInput update = 3;
        DeleteInput delete = 4;
        WatchInput watch = 5;
        EventsInput events = 6;
    }
}

message AtomicValueOutput {
    oneof output {
        GetOutput get = 1;
        SetOutput set = 2;
        UpdateOutput update = 3;
        DeleteOutput delete = 4;
        WatchOutput watch = 5;
        EventsOutput events = 6;
    }
}

message GetInput {
    
}

message GetOutput {
    Value value = 1;
}

message SetInput {
    bytes value = 1;
    google.protobuf.Duration ttl = 2 [
        (gogoproto.customname) = "TTL",
        (gogoproto.stdduration) = true
    ];
}

message SetOutput {
    uint64 index = 1 [
        (gogoproto.casttype) = "github.com/atomix/multi-raft-storage/api/atomix/multiraft/v1.Index"
    ];
}

message UpdateInput {
    bytes value = 1;
    uint64 prev_index = 2 [
        (gogoproto.casttype) = "github.com/atomix/multi-raft-storage/api/atomix/multiraft/v1.Index"
    ];
    google.protobuf.Duration ttl = 3 [
        (gogoproto.customname) = "TTL",
        (gogoproto.stdduration) = true
    ];
}

message UpdateOutput {
    uint64 index = 1 [
        (gogoproto.casttype) = "github.com/atomix/multi-raft-storage/api/atomix/multiraft/v1.Index"
    ];
    Value prev_value = 2 [
        (gogoproto.nullable) = false
    ];
}

message DeleteInput {
    uint64 prev_index = 1 [
        (gogoproto.casttype) = "github.com/atomix/multi-raft-storage/api/atomix/multiraft/v1.Index"
    ];
}

message DeleteOutput {
    Value value = 1 [
        (gogoproto.nullable) = false
    ];
}

message WatchInput {
    
}

message WatchOutput {
    Value value = 1;
}

message EventsInput {
    
}

message EventsOutput {
    Event event = 1 [
        (gogoproto.nullable) = false
    ];
}

message Value {
    bytes value = 1;
    uint64 index = 2 [
        (gogoproto.casttype) = "github.com/atomix/multi-raft-storage/api/atomix/multiraft/v1.Index"
    ];
}

message Event {
    oneof event {
        Created created = 1;
        Updated updated = 2;
        Deleted deleted = 3;
    }

    message Created {
        Value value = 1 [
            (gogoproto.nullable) = false
        ];
    }

    message Updated {
        Value value = 1 [
            (gogoproto.nullable) = false
        ];
        Value prev_value = 2 [
            (gogoproto.nullable) = false
        ];
    }

    message Deleted {
        Value value = 1 [
            (gogoproto.nullable) = false
        ];
        bool expired = 2;
    }
}
